# serialization

./: CMakeLists.txt  LICENSE  README.md
serialization/: CMakeLists.txt  serialization.h
serialization/tests/: CMakeLists.txt  serialization_tests.cpp
